# MSG-Loc

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  package.xml  rviz_msgloc.rviz  scripts.txt
Cameras/: ICL.yaml  TUM2.yaml
Config/: config.yaml
Detection_assets/: best.pt  coco.txt  coco_80.pkl  lvis.txt  tap_vit_b_v1_1.pkl
MSG-Loc_results/: graph_matching_results.csv  pose_results.txt
MSG-Loc_results/mot_data/filter/: gt.txt  res.txt
MSG-Loc_results/mot_data/non_filter/: gt.txt  res.txt
SLAM_results/: desk_gdino_coco_map.json  desk_gdino_lvis_map.json  desk_yolo_coco_map.json  desk_yolo_lvis_map.json  walk_gdino_coco_map.json  walk_gdino_lvis_map.json  walk_yolo_coco_map.json  walk_yolo_lvis_map.json
launch/: msgloc_node.launch
src/: msgloc.cpp
src/scripts/: detection_storage_gdino_coco.py  detection_storage_gdino_lvis.py  detection_storage_yolo_coco.py  detection_storage_yolo_lvis.py  quadricSLAM.py  result_pose.py
